test/classes/bradc/weirdinit.chpl
class pair {
  var x: int;
  var y: real;
}

def main() {
  var a: pair = a();
  writeln("Shouldn't that line have generated an error?");
}
